eks/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-rds-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-rds-app
  template:
    metadata:
      labels:
        app: flask-rds-app
    spec:
      containers:
      - name: flask-rds-app
        image: shivaram1918/flask-rds-app:latest
        ports:
        - containerPort: 5000
